--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -28,10 +29,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
