--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@dsb-norge/vue-keycloak-js": "^1.3.2",
     "@mdi/font": "^5.9.55",
+    "axios": "^0.21.1",
     "buefy": "^0.9.4",
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
