--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "buefy": "^0.9.4",
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0",
